--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,247 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css');
+
+body{
+    background: url(./assets/images/bg.png) no-repeat;
+    background-size: cover;
+}
+/* pap-digihub.component.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
+a{
+  text-decoration: none;
+}
+.content-wrapper {
+  min-height: 100vh;
+}
+.top-bar {
+    padding: 10px 0;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 15px;
+}
+/* Logo Card */
+.logo-card {
+    background: #ffffff;
+    padding: 35px 60px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+    max-width: 340px;
+    margin: 80px auto 0;
+}
+
+.logo-img {
+  max-width: 100%;
+}
+
+.brand-text {
+  font-weight: 600;
+  color: #0b3d2e;
+  margin: 0;
+}
+
+/* Buttons */
+.pap-btn {
+  background: #0f0f0f;
+  color: #ffffff;
+  border-radius: 8px;
+  padding: 14px 10px;
+  font-size: 14px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+    &:hover, &:focus{
+      background: transparent;
+      border:1px solid #000;
+      color:#000;
+      transform: translateY(-2px);
+    }
+}
+
+img.assembly-top {
+    width: 100%;
+    max-width: 250px;
+}
+
+.main-footer{
+  position: fixed;
+  bottom: 10px;
+}
+
+.powered-link {
+  color: #0f0f0f;
+  font-weight: 600;
+  text-decoration: none;
+}
+.page-title {
+  font-weight: 600;
+  // border-bottom: 3px solid #000;
+  display: inline-block;
+  padding-bottom: 5px;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    width: 50px;
+    height: 2px;
+    background: #0f0f0f;
+  }
+}
+
+.back-btn {
+  background: transparent;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+/* Cards */
+.dashboard-card {
+  min-height: 165px;
+  border-radius: 25px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  
+  &:hover {
+    .dashboard-card:hover {
+      transform: translateY(-6px);
+    }
+  }
+.dashboard-card .icon {
+  font-size: 40px;
+  margin-bottom: 15px;
+}
+
+.dashboard-card .label {
+  font-size: 20px;
+  font-weight: 500;
+}
+}
+.underline {
+  text-decoration: underline;
+}
+
+/* Gradients */
+.agenda {
+  background: linear-gradient(180deg, #b9853b 0%, #2b1c10 100%);
+}
+
+.notifications {
+  background: linear-gradient(180deg, #0b4d3b 0%, #0a1f1a 100%);
+}
+
+.questions {
+  background: linear-gradient(180deg, #3c5f8a 0%, #1b2636 100%);
+}
+.total_agenda {
+  background: linear-gradient(180deg, #1977B7 0%, #222327 100%);
+}
+.panel_of_chairpersons {
+  background: linear-gradient(180deg, #DDBB11 0%, #262120 100%);
+}
+.previous_sittings {
+  background: linear-gradient(180deg, #FB990D 0%, #2A231F 100%);
+}
+.single_color_agenda{
+  background-color: #197BBD;
+}
+.single_color_notice{
+  background-color: #E7C410;
+}
+.single_color_session_documents{
+  background-color: #005F4B;
+}
+.single_color_resolution{
+  background-color: #FF9B0D;
+}
+.single_color_print_order{
+  background-color: #4FCD00;
+}
+.single_color_legislative_bill{
+  background-color: #3D275C;
+}
+.single_color_question_document{
+  background-color: #B8853B;
+}
+.single_color_previous_proceedings{
+  background-color: #C90076;
+}
+.single_color_zero_hours{
+  background-color: #8E7CC3;
+}
+.single_color_calling_attention{
+  background-color: #2F3E4F;
+}
+.single_color_proceeding_summary{
+  background-color: #231F20;
+}
+/* Footer */
+.dashboard-footer {
+  width: 100%;
+  font-size: 13px;
+}
+
+.center-footer {
+  opacity: 0.85;
+}
+.bottom-footer{
+  margin-bottom: 5px;
+}
+.dashboard-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 16px;
+}
+@media (max-width: 1280px) {
+    .dashboard-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media (max-width: 992px) {
+    .dashboard-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 576px) {
+    .dashboard-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+.login-card {
+    width: 100%;
+    max-width: 450px;
+    border-radius: 1rem;
+    border: none;
+    .card-title{
+      font-size: 24px;
+    }
+  }
+
+  .form-control-lg {
+    padding: 0.75rem 1rem;
+    font-size: 1rem;
+    border: none; /* Remove default border */
+  }
+
+  .login-btn {
+    background-color: #004738; /* Dark green from image */
+    border: none;
+    padding: 0.75rem 1rem; font-size: 16px;
+  }
+
+  .login-btn:hover {
+    background-color: #004a32; /* Slightly darker on hover */
+  }
