--- a/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
+++ b/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
@@ -1,1 +1,37 @@
-<p>legislative-branch-dashboard works!</p>
+<div class="container-fluid dashboard-wrapper">
+
+  <div class="d-flex justify-content-between align-items-center px-md-4 mb-4">
+    <h2 class="page-title">{{pageTitle}}</h2>
+    <a href="/" class="back-btn text-dark">
+      <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_148_6871)">
+            <path d="M9.00012 18C13.9626 18 17.9999 13.9626 17.9999 8.99996C17.9999 4.03744 13.9626 0 9.00012 0C4.0376 0 0.000244141 4.03744 0.000244141 8.99996C0.000244141 13.9626 4.0376 18 9.00012 18ZM9.00012 1.23203C13.2833 1.23203 16.7679 4.71669 16.768 8.99996C16.768 13.2832 13.2834 16.7679 9.00012 16.768C4.71694 16.7679 1.23235 13.2832 1.23235 8.99988C1.23235 4.71677 4.71694 1.23203 9.00012 1.23203Z" fill="#231F20"/>
+            <path d="M7.79147 12.8547C7.90701 12.9702 8.06368 13.0351 8.22703 13.0351C8.39038 13.0351 8.54705 12.9702 8.66259 12.8547C8.71982 12.7975 8.76521 12.7296 8.79618 12.6548C8.82714 12.5801 8.84308 12.5 8.84307 12.4191C8.84306 12.3382 8.82711 12.258 8.79613 12.1833C8.76515 12.1085 8.71975 12.0406 8.66251 11.9834L6.29538 9.61638L13.1501 9.61573C13.3135 9.61571 13.4702 9.5508 13.5857 9.43527C13.7012 9.31974 13.7661 9.16305 13.7661 8.99967C13.7661 8.83629 13.7012 8.67961 13.5856 8.5641C13.4701 8.44858 13.3134 8.38369 13.15 8.3837L6.29505 8.38436L8.66276 6.01681C8.7783 5.90128 8.84321 5.74459 8.84322 5.58119C8.84323 5.4178 8.77833 5.2611 8.6628 5.14556C8.54727 5.03002 8.39057 4.96511 8.22718 4.9651C8.06379 4.96509 7.90709 5.02999 7.79155 5.14552L4.37235 8.56464C4.31512 8.62183 4.26973 8.68973 4.23877 8.76446C4.20781 8.8392 4.19188 8.91931 4.19189 9.00021C4.19198 9.16363 4.25691 9.32034 4.37243 9.43593L7.79147 12.8547Z" fill="#231F20"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_148_6871">
+            <rect width="18" height="18" fill="white"/>
+            </clipPath>
+            </defs>
+        </svg> Back
+    </a>
+  </div>
+
+  <!-- Cards -->
+  <div class="container-fluid px-lg-5 mb-4">
+    <div class="row g-4 justify-content-center">
+       <div class="dashboard-grid">
+        @for (item of legislative_dashboard_data; track $index) {
+            <div class="dashboard-card {{ item.class }}">
+            <div class="icon mb-3">
+                <img [src]="item.icon" alt="{{ item.title }}" />
+            </div>
+            <div class="label">{{ item.title }}</div>
+            </div>
+        }
+        </div>
+    </div>
+  </div>
+
+
+</div>
