--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<main class="content-wrapper">
-  <router-outlet></router-outlet>
-</main>
-<app-footer></app-footer>
+<div class="main-layout">
+  <app-header></app-header>
+  <main class="content-wrapper">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
