--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,3 +1,10 @@
+.main-layout {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .content-wrapper {
+  flex: 1;
   min-height: calc(100vh - 150px); // Adjust based on header/footer height
 }
