--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -16,14 +16,14 @@
       }
     </div>
   </div>
-  <div class="main-footer d-flex justify-content-between align-items-center w-100 px-4 mt-5">
-    <div class="building">
-      <img [src]="assebmle_pic" alt="Building" height="70">
-    </div>
+  <div class="main-footer d-flex justify-content-between align-items-center w-100 px-4 mt-5 flex-wrap flex-md-nowrap">
+      <div class="building text-center w-100 text-md-start mb-3 mb-md-0">
+        <img [src]="assebmle_pic" alt="Building" height="55">
+      </div>
 
-    <div class="pitb-logo text-end">
-      <img [src]="pitb_logo" alt="PITB Logo" height="45"><br>
-      Powered by: Punjab Information Technology Board
+      <div class="pitb-logo text-center text-md-end">
+        <img [src]="pitb_logo" alt="PITB Logo" height="40"><br>
+        Powered by: Punjab Information Technology Board
+      </div>
     </div>
-  </div>
 </div>
