--- a/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
+++ b/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid dashboard-wrapper">
 
-  <div class="d-flex justify-content-between align-items-center px-md-4 mb-4">
+  <div class="d-flex justify-content-between align-items-center px-4 mb-4 flex-wrap">
     <h2 class="page-title">{{pageTitle}}</h2>
     <a href="/" class="back-btn text-dark">
       <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,7 +19,7 @@
 
   <!-- Cards -->
   <div class="container-fluid px-lg-5 mb-4">
-    <div class="row g-4 justify-content-center">
+    <div class="row g-4 justify-content-center mb-4">
        <div class="dashboard-grid">
         @for (item of legislative_dashboard_data; track $index) {
             <div class="dashboard-card {{ item.class }}">
@@ -30,6 +30,26 @@
             </div>
         }
         </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card p-4 bg-dark text-white" style="border-radius: 20px;">
+          <div class="card-body text-start">
+            <div class="recent_uploaded d-flex align-items-center mb-3">
+              <div class="icon me-2">
+                <img src="assets/images/recent-uploaded.svg" alt="recent-uploaded" height="60"/>
+              </div>
+              <div class="label">
+                <h5>Recent Uploaded</h5>
+              </div>
+            </div>
+              <p class="mb-1">File Name: </p>
+              <p class="mb-1">Upload Date:</p>
+              <p class="mb-0">Status:</p>
+          </div>
+        </div>
+        
+      </div>
     </div>
   </div>
 
