--- a/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
+++ b/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid dashboard-wrapper">
 
-  <div class="d-flex justify-content-between align-items-center px-4 mb-4">
+  <div class="d-flex justify-content-between align-items-center px-4 mb-4 flex-wrap">
     <h2 class="page-title">{{pageTitle}}</h2>
     <a href="/" class="back-btn text-dark">
       <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
