--- a/src/app/components/question-login/question-login.component.html
+++ b/src/app/components/question-login/question-login.component.html
@@ -1,7 +1,7 @@
 <div class="login-page d-flex flex-column min-vh-100 position-relative overflow-hidden">
   <div class="container-fluid flex-grow-1 d-flex flex-column p-0">
     <header class="p-4">
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center flex-wrap">
         <a href="#" class="text-dark text-decoration-none fw-semibold d-flex align-items-center">
           <svg class="me-2" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_2_11055)">
@@ -15,7 +15,7 @@
             </defs>
           </svg>  Back
         </a>
-        <h3 class="text-center m-0 fw-bold flex-grow-1 title-text pe-5 me-5">Punjab Assembly DigiHub</h3>
+        <h3 class="text-center m-0 fw-bold flex-grow-1 title-text">Punjab Assembly DigiHub</h3>
         <div></div> </div>
       <div class="title-underline mx-auto mt-2"></div>
     </header>
@@ -24,29 +24,29 @@
       <div class="card login-card mx-auto mt-5 bg-black text-white p-2 py-4 shadow-lg">
         <div class="card-body text-center">
           <h2 class="card-title fw-bold mb-4">Question Branch Login</h2>
-          <form>
+           <form (ngSubmit)="onLogin($event)">
             <div class="mb-3">
               <input type="text" class="form-control form-control-lg rounded-3" placeholder="Username" aria-label="Username">
             </div>
             <div class="mb-4">
               <input type="password" class="form-control form-control-lg rounded-3" placeholder="Password" aria-label="Password">
             </div>
-            <button type="submit" class="btn btn-success btn-lg w-100  rounded-pill login-btn">LOGIN</button>
+            <button type="submit" class="btn btn-success btn-lg w-100 rounded-pill login-btn">LOGIN</button>
           </form>
           <a href="#" class="text-white text-decoration-none mt-4 d-block fw-light">Forgot Password?</a>
         </div>
       </div>
     </main>
 
-    <div class="main-footer d-flex justify-content-between align-items-center w-100 px-4 mt-5">
-    <div class="building">
-      <img [src]="assebmle_pic" alt="Building" height="70">
-    </div>
+    <div class="main-footer d-flex justify-content-between align-items-center w-100 px-4 mt-5 flex-wrap flex-md-nowrap">
+      <div class="building text-center w-100 text-md-start mb-3 mb-md-0">
+        <img [src]="assebmle_pic" alt="Building" height="55">
+      </div>
 
-    <div class="pitb-logo text-end">
-      <img [src]="pitb_logo" alt="PITB Logo" height="45"><br>
-      Powered by: Punjab Information Technology Board
+      <div class="pitb-logo text-center text-md-end">
+        <img [src]="pitb_logo" alt="PITB Logo" height="40"><br>
+        Powered by: Punjab Information Technology Board
+      </div>
     </div>
-  </div>
   </div>
 </div>
