--- a/src/app/components/current-session-dashboard/current-session-dashboard.component.scss
+++ b/src/app/components/current-session-dashboard/current-session-dashboard.component.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Overlock+SC&display=swap');
 .dashboard-card-big{
     height: 200px;
+    cursor: pointer;
     .label{
         font-size: 20px;
     }
