--- a/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
+++ b/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <!-- Cards -->
-  <div class="container">
+  <div class="container-fluid">
     <div class="row g-4 justify-content-center">
     @for (item of assembly_dashboard_cards; track $index) {
         <div class="col-md-4">
