--- a/src/app/components/legislativ-login/legislativ-login.component.html
+++ b/src/app/components/legislativ-login/legislativ-login.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid flex-grow-1 d-flex flex-column p-0">
     <header class="p-4">
       <div class="d-flex align-items-center flex-wrap">
-        <a href="#" class="text-dark text-decoration-none fw-semibold d-flex align-items-center">
+        <a [routerLink]="['/']" class="text-dark text-decoration-none fw-semibold d-flex align-items-center">
           <svg class="me-2" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_2_11055)">
             <path d="M9.00037 18C13.9629 18 18.0002 13.9626 18.0002 8.99996C18.0002 4.03744 13.9629 0 9.00037 0C4.03784 0 0.000488281 4.03744 0.000488281 8.99996C0.000488281 13.9626 4.03784 18 9.00037 18ZM9.00037 1.23203C13.2835 1.23203 16.7681 4.71669 16.7682 8.99996C16.7682 13.2832 13.2836 16.7679 9.00037 16.768C4.71718 16.7679 1.2326 13.2832 1.2326 8.99988C1.2326 4.71677 4.71718 1.23203 9.00037 1.23203Z" fill="#333333"/>
