--- a/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
+++ b/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.html
@@ -4,7 +4,7 @@
 
   <div class="d-flex justify-content-between align-items-center px-4 mb-4 flex-wrap">
     <h2 class="page-title">{{pageTitle}}</h2>
-    <a href="/" class="back-btn text-dark">
+    <a [routerLink]="['/']" class="back-btn text-dark">
       <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_148_6871)">
             <path d="M9.00012 18C13.9626 18 17.9999 13.9626 17.9999 8.99996C17.9999 4.03744 13.9626 0 9.00012 0C4.0376 0 0.000244141 4.03744 0.000244141 8.99996C0.000244141 13.9626 4.0376 18 9.00012 18ZM9.00012 1.23203C13.2833 1.23203 16.7679 4.71669 16.768 8.99996C16.768 13.2832 13.2834 16.7679 9.00012 16.768C4.71694 16.7679 1.23235 13.2832 1.23235 8.99988C1.23235 4.71677 4.71694 1.23203 9.00012 1.23203Z" fill="#231F20"/>
@@ -41,7 +41,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="imageModalLabel">Image Gallery</h5>
+          <!-- <h5 class="modal-title" id="imageModalLabel">Image Gallery</h5> -->
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
