--- a/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.scss
+++ b/src/app/components/member-assembly-dashboard/member-assembly-dashboard.component.scss
@@ -1,7 +1,10 @@
 .dashboard-card-big{
-    height: 200px;
+    min-height: 250px;
     .label{
         font-size: 24px;
+    }
+    @media screen and (max-width: 768px) {
+        min-height: 200px;
     }
 }
 .carousel-control-prev-icon,
