Updates in legislative dashboard

--- a/src/app/components/current-session-dashboard/current-session-dashboard.component.html
+++ b/src/app/components/current-session-dashboard/current-session-dashboard.component.html
@@ -49,15 +49,15 @@
   <div class="container">
     <div class="d-flex gap-3 flex-wrap justify-content-center mt-3">
         
-        <a href="#" class="btn btn-custom-green ps-4 pe-1 py-2 d-inline-flex align-items-center text-decoration-none">
-            <span class="me-3 fw-medium">View Agenda</span>
+        <a href="javascript:;" class="btn btn-custom-green ps-4 pe-1 py-2 d-inline-flex align-items-center text-decoration-none">
+            <span class="me-3 fw-medium">Rules / Constitution</span>
              <svg class="icon-circle" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="19.5981" cy="19.5981" r="19.5981" fill="#FEFFFF"/>
                 <path d="M32.2805 20.6043C32.6062 20.2787 32.6062 19.7506 32.2805 19.4249L26.9732 14.1176C26.6475 13.792 26.1195 13.792 25.7938 14.1176C25.4681 14.4433 25.4681 14.9714 25.7938 15.297L30.5114 20.0146L25.7938 24.7323C25.4681 25.0579 25.4681 25.586 25.7938 25.9117C26.1195 26.2373 26.6475 26.2373 26.9732 25.9117L32.2805 20.6043ZM8.33984 20.0146V20.8486H31.6908V20.0146V19.1807H8.33984V20.0146Z" fill="black"/>
             </svg>
         </a>
 
-        <a href="#" class="btn btn-custom-blue ps-4 pe-1 py-2 d-inline-flex align-items-center text-decoration-none">
+        <a href="javascript:;" class="btn btn-custom-blue ps-4 pe-1 py-2 d-inline-flex align-items-center text-decoration-none">
             <span class="me-3 fw-medium">Visit Website Link</span>
             <svg class="icon-circle" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="19.5981" cy="19.5981" r="19.5981" fill="#FEFFFF"/>
