--- a/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
+++ b/src/app/components/legislativ-login/legislative-branch-dashboard/legislative-branch-dashboard.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Cards -->
-  <div class="container-fluid px-lg-5 mb-4">
+  <div class="container-fluid mb-4">
     <div class="row g-4 justify-content-center mb-4">
        <div class="dashboard-grid">
         @for (item of legislative_dashboard_data; track $index) {
