--- a/src/styles.scss
+++ b/src/styles.scss
@@ -188,6 +188,9 @@ img.assembly-top {
 .single_color_proceeding_summary{
   background-color: #231F20;
 }
+.single_color_other_motions{
+  background-color: #8F2800;
+}
 /* Footer */
 .dashboard-footer {
   width: 100%;
