--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -6,5 +6,5 @@
 
 .content-wrapper {
   flex: 1;
-  min-height: calc(100vh - 150px); // Adjust based on header/footer height
+  min-height: 63vh; 
 }
