--- a/src/app/components/current-session-dashboard/today-agenda/today-agenda.component.html
+++ b/src/app/components/current-session-dashboard/today-agenda/today-agenda.component.html
@@ -73,6 +73,43 @@
           </table>
         </div>
       </div>
+
+      <div class="mb-3 text-center section-block text-eng" dir="ltr">
+        <h5 class="fw-bold text-uppercase text-eng">1-INTRODUCTION OF BILL / BILLS</h5>
+      </div>
+      <div class="mb-3 section-block text-eng" dir="ltr">
+        <div class="row">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title">1.	THE PANJNAD UNIVERSITY BILL 2025</div>
+              <ul class="list-unstyled pannj-bill pannj-bill_eng">
+                <li>
+                  <div class="d-flex">
+                    <div class="name_eng">
+                    <div class="fw-bold">A Minister </div>
+                  </div>
+                  <div class="dec">
+                    <p class="mb-0">I move that leave be granted to introduce the Panjnad University Bill 2025.                    </p>
+                  </div>
+                  </div>
+                  
+                </li>
+                <li>
+                  <div class="d-flex">
+                    <div class="name_eng">
+                    <div class="fw-bold">A Minister </div>
+                  </div>
+                  <div class="dec">
+                    <p class="mb-0">I move that leave be granted to introduce the Panjnad University Bill 2025.                    </p>
+                  </div>
+                  </div>
+                  
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- English End -->
     <div class="urdu_content" [class.hide]="isEnglish" [class.show]="!isEnglish" dir="rtl">
