--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,14 @@ body{
       max-width: 220px;
       // margin-right:20px
     }
+    .name_eng{
+      min-width: 100px;
+    }
+  }
+}
+.pannj-bill_eng{
+  li{
+    margin-bottom: 15px;
   }
 }
 .hide{
